add new sections

--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -2,7 +2,7 @@
     {% assign prefix = site.imgPrefix %}
     {% assign content = site.data.about %}
     <div class="content">
-        {% for item in site.data.about %}
+        {% for item in content %}
         <div class="info">
 
             <div class="title">{{ item.title }}</div>
