--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,3 +5,7 @@
     </a>
     {% endfor %}
 </nav>
+<!--<script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>-->
+<!--<script>-->
+<!--    anchors.add('a');-->
+<!--</script>-->
