add new sections

--- a/_includes/advantages/advantages.html
+++ b/_includes/advantages/advantages.html
@@ -1,8 +1,8 @@
-<section class="container">
+<section class="section advantages">
     {% assign prefix = site.imgPrefix %}
-    <div class="title">The advantages you'll get</div>
-    <div class="description">Our diverse background allows offering you
-        the most effective practices.</div>
+    <h1>The advantages you'll get</h1>
+    <h2>Our diverse background allows offering you
+        the most effective practices.</h2>
     <div class="advantages-container">
         {% for item in site.data.advantages %}
         <div class="advantage">
