--- a/_includes/advantages/advantages.scss
+++ b/_includes/advantages/advantages.scss
@@ -1,29 +1,12 @@
-.container {
-  margin: 142px 0;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  flex-direction: column;
-
-  .title {
-    font-size: 42px;
-    font-family: Arial;
-    font-weight: bold;
-  }
-
-  .description {
-    padding: 40px 0;
-    width: 560px;
-    font-size: 24px;
-    font-family: Arial;
-  }
+.advantages {
+  background-color: #f5f5f5;
 
   .advantages-container {
     width: 1200px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 360px);
     grid-column-gap: 20px;
-    grid-row-gap: 62px;
+    grid-row-gap: 72px;
 
     .advantage {
       display: grid;
@@ -51,6 +34,7 @@
         font-size: 16px;
         font-weight: 300;
         font-family: Arial;
+        line-height: 1.55;
       }
     }
   }
