--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -6,6 +6,7 @@
 @import "advantages";
 @import "services";
 @import "how-it-works";
+@import "partnership";
 
 body {
   margin: 0;
@@ -15,31 +16,35 @@ body {
 .section {
   @include flex(column, center, center);
   padding: 142px 0;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  flex-direction: column;
 
   h1 {
-    @include font(42px, 600, 1.23);
-    font-family: 'Roboto',Arial,sans-serif;
+    @include font(42px, 600);
+    line-height: 1.23;
     color: black;
   }
 
   h2 {
-    @include font(24px, 300, 1.5);
+    @include font(24px, 300);
+    line-height: 1.5;
     color: black;
-    font-family: 'Roboto',Arial,sans-serif;
     max-width: 560px;
     padding: 0 0 80px;
   }
 
   &.section-dark {
     h1 {
-      @include font(42px, 600, 1.23);
-      font-family: 'Roboto',Arial,sans-serif;
+      @include font(42px, 600);
+      line-height: 1.23;
       color: white;
 
+    }
+
+    h2 {
+      @include font(24px, 300);
+      line-height: 1.5;
+      color: white;
+      max-width: 560px;
+      padding: 0 0 80px;
     }
   }
 }
