--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -1,22 +1,18 @@
-<section class="about">
+<section class="section about">
     {% assign prefix = site.imgPrefix %}
     {% assign content = site.data.about %}
-    <div class="content">
-        {% for item in content %}
+    <div class="content content-block">
         <div class="info">
-
-            <div class="title">{{ item.title }}</div>
-            <div class="description">{{ item.description1 }}</div>
-            <div class="description">{{ item.description2 }}</div>
-            <div class="description">{{ item.description3 }}</div>
-
+            <div class="title">{{ content.title }}</div>
+            <div class="description">{{ content.description1 }}</div>
+            <div class="description">{{ content.description2 }}</div>
+            <div class="description">{{ content.description3 }}</div>
         </div>
         <div class="collage">
-            <img src="{{ prefix }}{{ item.image1 }}">
-            <img src="{{ prefix }}{{ item.image2 }}">
-            <img src="{{ prefix }}{{ item.image3 }}">
-            <img src="{{ prefix }}{{ item.image4 }}">
+            <img src="{{ prefix }}{{ content.image1 }}">
+            <img src="{{ prefix }}{{ content.image2 }}">
+            <img src="{{ prefix }}{{ content.image3 }}">
+            <img src="{{ prefix }}{{ content.image4 }}">
         </div>
-        {% endfor %}
     </div>
 </section>
