--- a/_includes/how-it-works/how-it-works.html
+++ b/_includes/how-it-works/how-it-works.html
@@ -1,11 +1,19 @@
-<section class="section">
-    <h1></h1>
-    <h2></h2>
-    {% for item in site.data.how-it-works %}
-    <div class="product-block">
-        <div class="index">{{ item.index }}</div>
-        <div class="product-title">{{ item.title }}</div>
-        <div class="product-description">{{ item.description }}</div>
+<section class="section how-it-works-section">
+    <div class="content">
+        <div class="text-center">
+            <h1>How it works</h1>
+            <h2>We will help you get from the initial product concept to a working service with happy users, guiding you
+                through
+                the entire process.</h2>
+        </div>
+        <div class="product-container">
+            {% for item in site.data.how-it-works %}
+            <div class="product-block">
+                <div class="index">{{ item.index }}</div>
+                <div class="product-title">{{ item.title }}</div>
+                <div class="product-description">{{ item.description }}</div>
+            </div>
+            {% endfor%}
+        </div>
     </div>
-    {% endfor%}
 </section>
