--- a/_includes/advantages/advantages.scss
+++ b/_includes/advantages/advantages.scss
@@ -1,3 +1,10 @@
+/*!
+ * Copyright (c) 2022. Implex
+ * All rights reserved
+ */
+
+@import 'mixins';
+
 .advantages {
   background-color: #f5f5f5;
 
