--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,8 @@
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <nav>
     {% for item in site.data.navigation %}
     <a href="{{ item.link }}" {% if page.url == item.link %}style="color: red;"{% endif %}>
