--- a/_includes/partnership/partnership.html
+++ b/_includes/partnership/partnership.html
@@ -1,11 +1,16 @@
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <section class="section section-dark partnership">
     <div class="overlay">
         <div class="content content-block">
             <h1>Partnership is the only way to success!</h1>
             <h2>We strive to build relationships with our clients that last for years. This makes trust, reliability and
                 respect the principle values of our culture.</h2>
-            <div class="button">
-                <button>Contact us</button>
+            <div class="button-wrapper">
+                <button class="partnership-button">Contact us</button>
             </div>
         </div>
     </div>
