--- a/_includes/post-preview/post-preview.html
+++ b/_includes/post-preview/post-preview.html
@@ -1,3 +1,8 @@
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <a href="{{ include.post.url }}" class="post-preview">
   <div class="image-wrapper">
     <img src="{{ include.post.image }}" />
