--- a/_includes/services/services.html
+++ b/_includes/services/services.html
@@ -1,3 +1,8 @@
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <section class="section services">
     {% assign prefix = site.imgPrefix %}
     <div class="content content-block">
