--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,8 @@
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <!doctype html>
 <html>
 <head>
@@ -12,5 +17,6 @@
 <body>
   {% include header/header.html %}
   {{ content }}
+  {% include footer/footer.html %}
 </body>
 </html>
