--- a/_includes/how-it-works/how-it-works.html
+++ b/_includes/how-it-works/how-it-works.html
@@ -1,3 +1,8 @@
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <section class="section how-it-works-section">
     <div class="content">
         <div class="text-center">
