--- a/_includes/intro/intro.scss
+++ b/_includes/intro/intro.scss
@@ -1,23 +1,54 @@
+/*!
+ * Copyright (c) 2022. Implex
+ * All rights reserved
+ */
+
 .intro {
-  padding: 42px 0;
-  min-height: 1200px;
-  display: flex;
+  height: 100vh;
   align-items: center;
   text-align: center;
-  justify-content: center;
-  flex-direction: column;
-  background-color: antiquewhite;
+  background-image: url("../../assets/img/background/main-bg.webp");
+  background-size: cover;
 
-  .title {
-    padding: 24px 0;
-    font-size: 72px;
-    font-weight: bold;
-    max-width: 960px;
-  }
+  .overlay {
+    @include size(100%, 100%);
+    background-color: rgba(0, 0, 0, .7);
+    position: relative;
 
-  .description {
-    padding: 15px 0 30px;
-    font-size: 22px;
-    max-width: 960px;
+    .intro-wrapper {
+      margin: 0;
+      top: 50%;
+      left: 50%;
+      position: absolute;
+      transform: translate(-50%, -50%);
+
+      .title {
+        padding: 24px 0;
+        font-size: 72px;
+        font-weight: bold;
+        max-width: 960px;
+      }
+
+      .description {
+        padding: 15px 0 30px;
+        font-size: 22px;
+        max-width: 960px;
+      }
+
+      .button-wrapper {
+        margin-top: 44px;
+
+        .intro-button {
+          @include size(220px, 60px);
+          @include font(16px, 700);
+          background-color: #f5914f;
+          border: 1px solid #f5914f;
+          border-radius: 5px;
+          color: white;
+          cursor: pointer;
+          text-transform: uppercase;
+        }
+      }
+    }
   }
 }
