--- a/_includes/vacancy-preview/vacancy-preview.html
+++ b/_includes/vacancy-preview/vacancy-preview.html
@@ -1,3 +1,8 @@
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <a href="{{ include.post.url }}" class="vacancy-preview">
   <div>
     <div class="title">{{ include.post.title }}</div>
