--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <h1>{{ page.name }}</h1>
 <h2>{{ page.position }}</h2>
 
