--- a/_layouts/vacancy.html
+++ b/_layouts/vacancy.html
@@ -2,6 +2,11 @@
 
 ---
 <!doctype html>
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <html>
 <head>
     <meta charset="utf-8">
