--- a/_includes/clients/clients.html
+++ b/_includes/clients/clients.html
@@ -1,7 +1,9 @@
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <section class="section clients">
     {% assign prefix = site.imgPrefix %}
