--- a/_includes/intro/intro.html
+++ b/_includes/intro/intro.html
@@ -1,7 +1,9 @@
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <section class="section section-dark intro">
     <div class="overlay">
@@ -16,6 +18,4 @@
             <div class="arrow"></div>
         </div>
     </div>
-
-
 </section>
