--- a/_includes/vacancy-preview/vacancy-preview.html
+++ b/_includes/vacancy-preview/vacancy-preview.html
@@ -1,7 +1,9 @@
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <a href="{{ include.post.url }}" class="vacancy-preview">
   <div>
