--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,12 @@
 
 ---
 <!doctype html>
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <html>
 <head>
