--- a/_includes/footer/footer.html
+++ b/_includes/footer/footer.html
@@ -1,7 +1,9 @@
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <footer>
     {% assign content = site.data.footer %}
