--- a/_includes/how-it-works/how-it-works.html
+++ b/_includes/how-it-works/how-it-works.html
@@ -1,7 +1,9 @@
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <section class="section how-it-works-section">
     <div class="content">
