--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,9 @@
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <nav>
     {% for item in site.data.navigation %}
