--- a/_includes/partnership/partnership.html
+++ b/_includes/partnership/partnership.html
@@ -1,7 +1,9 @@
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <section class="section section-dark partnership">
     <div class="overlay">
