--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,10 +1,12 @@
 ---
 layout: default
 ---
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <h1>{{ page.name }}</h1>
 <h2>{{ page.position }}</h2>
