--- a/_includes/blog/blog.scss
+++ b/_includes/blog/blog.scss
@@ -1,8 +1,24 @@
 .blog {
   background-color: #f5f5f5;
 
+  .title {
+    @include tablet-screen {
+      @include font(30px, 600);
+    }
+  }
+
+  .subtitle {
+    @include tablet-screen {
+      @include font(20px, 300);
+    }
+  }
+
   .articles-container {
     margin-top: 90px;
+
+    @include tablet-screen {
+      margin-top: 45px;
+    }
 
     .article {
       display: grid;
@@ -13,7 +29,9 @@
       cursor: pointer;
 
       @include tablet-screen {
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
+        column-gap: 0;
+        grid-row-gap: 20px;
       }
 
       &:last-child {
@@ -27,6 +45,7 @@
         grid-row: 1;
 
         @include tablet-screen {
+          @include font(20px, 600);
           grid-column: 1;
           grid-row: 2;
         }
@@ -41,6 +60,7 @@
         margin-top: 10px;
 
         @include tablet-screen {
+          @include font(12px, 300);
           grid-column: 1;
           grid-row: 3;
         }
@@ -63,6 +83,11 @@
       .image {
         grid-column: 1;
         grid-row: 5 / 1;
+
+        img {
+          width: 100%;
+          height: auto;
+        }
 
         @include tablet-screen {
           grid-column: 1;
