--- a/_includes/clients/clients.scss
+++ b/_includes/clients/clients.scss
@@ -3,6 +3,18 @@
 .clients {
   background-color: white;
 
+  .title {
+    @include tablet-screen {
+      @include font(30px, 600);
+    }
+  }
+
+  .subtitle {
+    @include tablet-screen {
+      @include font(20px, 300);
+    }
+  }
+
   .clients-container {
 
     .clients-block {
@@ -14,6 +26,9 @@
 
       @include tablet-screen {
         grid-template-columns: 100%;
+        grid-column-gap: 0;
+        grid-row-gap: 20px;
+        margin-top: 80px;
       }
 
       &:nth-child(n + 2):nth-child(-n + 2) {
@@ -46,6 +61,7 @@
         grid-column: 2;
 
         @include tablet-screen {
+          @include font(22px, 600);
           grid-column: 1;
         }
       }
@@ -56,6 +72,7 @@
         grid-column: 2;
 
         @include tablet-screen {
+          @include font(14px, 300);
           grid-column: 1;
         }
 
@@ -85,6 +102,7 @@
         grid-column: 2;
 
         @include tablet-screen {
+          @include size(186px, 60px);
           grid-column: 1;
         }
       }
