--- a/_includes/partnership/partnership.scss
+++ b/_includes/partnership/partnership.scss
@@ -12,6 +12,22 @@
       margin: 0 auto;
       padding: 110px 0;
       text-align: center;
+
+      @include tablet-screen {
+        padding-inline: 20px;
+      }
+    }
+
+    .title {
+      @include tablet-screen {
+        @include font(30px, 600);
+      }
+    }
+
+    .description {
+      @include tablet-screen {
+        @include font(20px, 300);
+      }
     }
 
     .button-wrapper {
@@ -25,7 +41,10 @@
         border-radius: 5px;
         color: white;
         cursor: pointer;
-        text-transform: uppercase;
+
+        @include tablet-screen {
+          width: 100%;
+        }
       }
     }
   }
