add mobile menu

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -19,6 +19,7 @@
 @import "partnership";
 @import "post-preview";
 @import "vacancy-preview";
+@import "navigation";
 
 body {
   font-family: 'Roboto', sans-serif;
